<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="btnClr">Clear</string>
    <string name="TextView4">Simple Calculator</string>
    <string name="resultid">resultid</string>
    <string name="btn0">0</string>
    <string name="btnDec">.</string>
    <string name="btnDiv">/</string>
    <string name="btnSub">-</string>
    <string name="btnAdd">+</string>
    <string name="btnMul">X</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnCal">CALCULATE</string>
</resources>